# serde-loader

./: Cargo.toml  README.md
src/: abs_path_buf.rs  common.rs  dir_stack.rs  error.rs  file.rs  json.rs  json5.rs  lib.rs  protobuf.rs  yaml.rs
tests/: dump.rs
tests/config-example/: main.json
tests/config-example/sub/: sub.json
tests/config-example/sub/sub/: sub_of_sub.json
