[package]
name = "serde-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.55"
derivative = "2.2.0"
json5 = { version = "0.4.1", optional = true }
prost = { version = "0.9.0", optional = true }
serde_json = { version = "1.0.79", optional = true }

[features]
full = ["json", "json5", "protobuf"]
protobuf = ["prost"]
json = ["serde_json"]

[package.metadata.docs.rs]
features = ["full"]
