[package]
name = "serde-loader"
version = "0.1.2"
edition = "2021"
description = "Serde wrapper to load/save serializable data from relative paths"
documentation = "https://docs.rs/serde-loader/"
repository = "https://github.com/jerry73204/serde-loader.git"
homepage = "https://github.com/jerry73204/serde-loader"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.55"
derivative = "2.2.0"
json5 = { version = "0.4.1", optional = true }
prost = { version = "0.9.0", optional = true }
serde_json = { version = "1.0.79", optional = true }

[features]
full = ["json", "json5", "protobuf"]
protobuf = ["prost"]
json = ["serde_json"]

[package.metadata.docs.rs]
features = ["full"]
